added an incredibly basic chat implementation after connecting to the firebase db

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,52 +1,66 @@
 .navbar{
  height: 10vh;
- background-color: black;
+ background-color: rgba(0, 0, 0, 0.47);
  display: flex;
  justify-content: space-between;
  align-items: center;
+ font-family: 'Courier New', Courier, monospace;
 }
 .left-nav-content-wrapper{
     /* background-color: red; */
-    width: 33%;
+    width: 33.33%;
 }
 .right-nav-content-wrapper{
     /* background-color: red; */
-    width: 33%;
+    width: 33.33%;
 }
 .nav-header{
     /* background-color: rgb(55, 0, 255); */
     text-align: center;
     color: white;
+    width: 33.33%;
     margin: 0;
+}
+.nav-header a{
+    text-decoration: none;
+    color:white;
 }
 
 .left-nav-content{
+    /* background-color: orange; */
     display: flex;
     justify-content: space-evenly;
     color: rgba(255, 255, 255, 0.616);
+    margin: 0;
+    padding: 0;
 }
 .left-nav-content li{
+    /* background-color: green; */
     list-style: none;
     cursor: pointer;
 }
 
+
 .right-nav-content{
-    /* background-color: black; */
+    /* background-color: orange; */
     display: flex;
     justify-content: space-evenly;
     color: rgba(255, 255, 255, 0.616);
-
+    margin: 0;
+    padding: 0;
 }
 .right-nav-content li{
+    /* background-color: green; */
+
     list-style: none;
     cursor: pointer;
 }
-.nav-link-header{
+/* .nav-link-header{
     width: 33%;
     display: flex;
     justify-content: center;
     text-decoration: none;
-}
+} */
 
 .nav-link{
     text-decoration: none;
@@ -55,15 +69,21 @@
 .nav-link:hover{
     color: white;
 }
+.nav-link.active{
+    color: white;
+}
 .hamburger{
     background-color: white;
     display: none;
 }
 
-@media(max-width:500px){
-    .hamburger{
-
+@media(max-width:750px){
+    /* .hamburger{
+        display: block;
     }
+    .navbar{
+        flex-direction: column;
+    } */
 }
 
 
