--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,27 @@
 body{
-  background-color: grey;
+  /* background-color: rgba(128, 128, 128, 0.334); */
+  /* background-color: #FFFFFF; */
+  /* background: url('./assets/circles.png'); */
+  
+ 
+    --s: 100px; /* control the size*/
+    --c1: #c3ccaf;
+    --c2: #67434f;
+    
+    --_s: calc(2*var(--s)) calc(2*var(--s));
+    --_g: var(--_s) conic-gradient(at 40% 40%,#0000 75%,var(--c1) 0);
+    --_p: var(--_s) conic-gradient(at 20% 20%,#0000 75%,var(--c2) 0);
+    background:
+      calc( .9*var(--s)) calc( .9*var(--s))/var(--_p),
+      calc(-.1*var(--s)) calc(-.1*var(--s))/var(--_p),
+      calc( .7*var(--s)) calc( .7*var(--s))/var(--_g),
+      calc(-.3*var(--s)) calc(-.3*var(--s))/var(--_g),
+      conic-gradient(from 90deg at 20% 20%,var(--c2) 25%,var(--c1) 0) 
+       0 0/var(--s) var(--s);
+  
+  
+  width: 100%;
+  height: 100%;
+  margin: 0;
 }
+
