--- a/src/css/NewsGrid.css
+++ b/src/css/NewsGrid.css
@@ -1,18 +1,43 @@
+@import url('https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Audiowide&family=DynaPuff:wght@400..700&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Orbitron:wght@400..900&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&family=Sriracha&display=swap');
+
+
+
 .news-grid{
     margin: 0 auto;
+    /* position: relative;
+    top: 10vh; */
     margin-top: 10px;
+    margin-bottom: 10px;
     display: grid;
     height: 100%;
+    
     width: 97%;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(3,1fr);
     gap: 10px;
+    /* font-family:'Sriracha',"DynaPuff","Sour Gummy", serif; */
+    font-family: "Arvo", serif;
+
 }
 
 .news-item{
-    background-color: white;
-    box-shadow: 3px 3px 3px rgba(0,0,0.5);
+    height: 450px;
+    /* background-color: #2C3E50; */
+    /* background-color: black; */
+    /* background-color: #fff; */
+    background-color: #66424e;
+
+
+    border: 3.5px solid #c3ccaf;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
     border-radius: 5px;
+    box-sizing: border-box;
+}
+.news-item:hover{
+    /* background-color: hsl(210, 29%, 44%); */
+    /* background-color: hsl(0, 0%, 20%); */
+    background-color: hsl(340, 21%, 53%);
+    scale: 1.01;
 }
 .news-item-img{
     width: 100%;
@@ -21,59 +46,186 @@
     
 }
 .news-item-1{
-    display: flex;
+    
     grid-column: span 2;
+    transform: translateX(-150%);
+}
+.news-item-1 .article-link{
+    display: flex;
+    align-items: center;
+}
+.header-container .news-item-header{
+    font-size: clamp(1.25rem, 1.036rem + 1.071vw, 2.75rem);
 }
 .news-item-1 .header-container{
-    width: 30%;
+    width: 25%;
+    text-align: center;
 }
 .news-item-1 .img-container{
     height: 100%;
+    width: 75%;
 }
+
 .news-item-1 .news-item-img{
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
+    border-radius: 5px 0 0 5px;
 }
 .news-item-2{
     /* grid-row: span 2; */
+    transform: translateX(150%);
+    text-align: center;
+    /* padding-bottom: 10px; */
+
 }
 
-.news-item-2 .img-container{
-    height: 85%;
+.news-item-2 .header-container{
+    height: 30%;
+    display: flex;
+    align-items: center;
 }
+.news-item-2 .img-container{
+    height: 70%;
+}
+
 .news-item-2 .news-item-img{
   width: 100%;
   height: 100%;
-  object-fit: contain;
-  
+  object-fit: cover;
+  border-radius: 5px 5px 0 0;
     
 }
 .news-item-3{
-
+    transform: translateX(-150%);
+    text-align: center;
+    /* padding-bottom: 10px; */
+}
+.news-item-3 .header-container{
+    height: 30%;
+    display: flex;
+    align-items: center;
 }
 .news-item-3 .img-container{
     height: 70%;
 }
 .news-item-3 .news-item-img{
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
+    border-radius: 5px 5px 0 0;
 }
 .news-item-4{
     grid-column: span 2;
+    transform: translateX(150%);
+    /* box-shadow: -1px 3px 3px rgba(0, 0, 0, 0.5); */
+}
+.news-item-4 .article-link{
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
 }
 
 .news-item-4 .img-container{
-    height: 70%;
+    height: 100%;
+    width: 75%;
+}
+.news-item-4 .header-container{
+    width: 25%;
+    text-align: center;
 }
 .news-item-4 .news-item-img{
     height: 100%;
-    object-fit: contain;
+    /* object-fit: contain; */
     width: 100%;
+    border-radius: 0 5px 5px 0 ;
 }
 
 .article-link{
     text-decoration: none;
-    color: black;
+    color: white;
     height: 100%;
     width: 100%;
 }
+
+@keyframes slide-from-right {
+    from{
+    transform: translateX(150%);
+    }
+    95%{
+        transform: translateX(-10%);
+    }
+    100%{
+        transform: translateX(0);
+    }
+    
+}
+@keyframes slide-from-left {
+    0%{
+    transform: translateX(-150%);
+    }
+    95%{
+        transform: translateX(10%);
+    }
+    100%{
+        transform: translateX(0);
+    }
+    
+}
+
+.news-item-2,.news-item-4{
+    animation: slide-from-right .75s ease-in-out .2s forwards ;
+}
+.news-item-1,.news-item-3{
+    animation: slide-from-left .75s ease-in .2s forwards ;
+}
+
+@media(max-width:800px){
+    .news-grid{
+        grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    }
+
+}
+@media(max-width:675px){
+    .news-item{
+        grid-column: span 2;
+    }
+
+    .article-link{
+        flex-direction: column;
+    }
+    .news-item-4 .article-link{
+        flex-direction: column;
+    }
+    .news-item-1 .header-container{
+        height: 30%;
+        width: 100%;
+        display: flex;
+        align-items: center;
+    }
+    .news-item-1 .img-container{
+        height: 70%;
+        width: 100%;
+    }
+    .news-item-1 .news-item-img{
+        height: 100%;
+        object-fit: cover;
+        border-radius: 5px 5px 0 0;
+    }
+    .news-item-4 .header-container{
+        height: 30%;
+        width: 100%;
+        display: flex;
+        align-items: center;
+    }
+    .news-item-4 .img-container{
+        height: 70%;
+        width: 100%;
+    }
+    .news-item-4 .news-item-img{
+        height: 100%;
+        object-fit: cover;
+        border-radius: 5px 5px 0 0;
+    }
+    
+}
+
+
