--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -11,7 +11,6 @@
     height: 125px;
     width: 100%;
     font-family: 'Orbitron',sans-serif;
-    padding-top: 10px;
     font-size: .75rem;
 }
 .footer-content{
@@ -22,10 +21,13 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-}
+    padding-top: 15px;
+    font-size: clamp(0.5rem, 0.357rem + 0.714vw, .75rem);
 
+}
+/* 
 @media(max-width:390px){
     .footer{
         font-size: .65rem;
     }
-}
+} */
